2010-11-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16352: [saltedpasswords] Login with bulk updated passwords from t3sec_saltedpw not working (Thanks to Marcus Krause)

2010-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16346: htmlArea RTE: fontstyle/fontsize may raise js error on toolbar update

2010-11-10  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16335: Workspace Draft Records are shown in Live Workspace in some cases (Thanks to Joerg Kinast)

2010-11-09  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15184: Generation transparent images with GMENU fails (Thanks to Mathias Schreiber)

2010-11-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14901: Forgotten styling: User Name at the top misses a CSS definition (Thanks to Christopher Stelmaszyk)

2010-11-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16245: htmlArea RTE: When inserting link with IE8, trailing line break is also linked
	* Updated htmlArea RTE version to 2.0.7
	* Fixed bug #16313: htmlArea RTE: WebKit does not support copy and cut commands anymore

2010-11-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)

2010-11-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16130: buggy initialization of flash uploader when only certain file extensions are allowed (Thanks to Andreas Kiessling)

2010-11-04  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15656: indexed_search: Template corrections of #14130 not applied to the CSS template (Thanks to Lorenz Ulrich)

2010-11-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15995: Bug: doktype limitation is not applied to alternative page languages (pages_language_overlay) (Thanks to Andreas Kiessling)

2010-11-03  Stanislas Rolland  <typo3@sjbr.ca>
